# bwinf-41-1

./: .editorconfig  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
fahrradwerkstatt/: README.html  README.md  program copy.py  program.py  program_copy.py
fahrradwerkstatt/beispieldaten/: fahrradwerkstatt5.txt
gL5WY3fPt751WfPpougU/: 179.bundle.js  235.chunk.js  235.js  695.js  bundle.js  index.html  main.css  main.js
huepfburg/: program.py  program2.py  program3.py
stoerung/: README.html  README.md  program.py
störung/: README.md  program.py  program2.py  program3.py
sudokopie/: README.html  README.md  program.py
sudokopie/beispieldaten/: sudoku0.txt
verzinkt/: README.md  program.py
verzinkt/site/: Cargo.toml  LICENSE  README.md  package.json  tsconfig.json  webpack.config.js
verzinkt/site/scripts/: fix-snackbar.js
verzinkt/site/src/: App.svelte  index.ejs  index.ts  lib.rs  reset.css
verzinkt/site/src/components/: Buttons.svelte  Canvas.svelte  Color.svelte  Controls.svelte  Settings.svelte  Sidebar.svelte
verzinkt/site/src/lib/: Cargo.toml  README.md
