[tool.poetry]
name = "bwinf-41-1"
version = "0.1.0"
description = "Meine Lösungen zur 1. Runde des 41. BWINF."
authors = ["leonhma <leonhardmasche@gmail.com>"]
readme = "README.md"
packages = [{include = "bwinf_41_1"}]

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.group.dev.dependencies]
more-itertools = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
