[package]
name = "lib"
version = "0.1.0"
description = "The library powering the canvas."
repository = "https://github.com/leonhma/bwinf-40-1"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2"
wasm-tracing-allocator = "0.1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'ImageData'
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
